--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 32 32%22><text y=%2228%22 font-size=%2224%22>🐱</text></svg>">
+    <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MichInglishAPP</title>
   </head>
